# arachne-pnr

./: Makefile.am  configure.ac
doc/: Doxyfile
src/: arachne-pnr.cc  bitvector.hh  blif.cc  blif.hh  bstream.hh  carry.hh  casting.hh  cbit.cc  cbit.hh  cbitval.cc  cbitval.hh  celltype.hh  chipdb.cc  chipdb.hh  chipdbparser.cc  chipdbparser.hh  configuration.cc  configuration.hh  const.cc  const.hh  constant.cc  constant.hh  constraints.cc  constraints.hh  design.cc  design.hh  designstate.cc  designstate.hh  direction.cc  direction.hh  global.cc  global.hh  hashmap.hh  hashset.hh  identified.hh  instance.cc  instance.hh  io.cc  io.hh  lexical_position.cc  (+36 more)
src/chipdb/: cbit.cc  cbit.hh  cbitval.cc  cbitval.hh  celltype.hh  chipdb.cc  chipdb.hh  chipdbparser.cc  chipdbparser.hh  location.cc  location.hh  package.hh  switch.cc  switch.hh  tiletype.cc  tiletype.hh
src/configuration/: bit.cc  bit.hh  bitval.cc  bitval.hh  configuration.cc  configuration.hh
src/netlist/: const.cc  const.hh  design.cc  design.hh  direction.cc  direction.hh  identified.hh  instance.cc  instance.hh  model.cc  model.hh  models.cc  models.hh  net.cc  net.hh  node.cc  node.hh  port.cc  port.hh  value.hh
src/parse/: blif.cc  blif.hh  pcf.cc  pcf.hh
src/process/: constant.cc  constant.hh  global.cc  global.hh  io.cc  io.hh  pack.cc  pack.hh  place.cc  place.hh  process.cc  process.hh  route.cc  route.hh
tests/: test_bv.cc  test_us.cc
tools/gen-ice40-chipdb/: chipdbparser.cc  chipdbparser.hh  gen-ice40-chipdb.cc
